--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,9 @@ repositories {
 
 
 dependencies {
-	compile project(':champions-league-tools')
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.0.RELEASE'
+	compile 'org.projectlombok:lombok:1.16.16'
 	runtimeOnly('mysql:mysql-connector-java')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
